<resources>
    <string name="app_name">KotlinStarter</string>
    <string name="counter_hint">0</string>
    <string name="counter_button">Roll</string>
    <string name="imagedice">imageDice</string>
    <string name="title_activity_basic">BasicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="roll_dice_app">Roll Dice App</string>
    <string name="basic_activity">basic Activity</string>
    <string name="interactive">interactive</string>
    <string name="constrain_layout_app">constrain layout app</string>
    <string name="box_one">box one</string>
    <string name="box_two">box two</string>
    <string name="box_three">box three</string>
    <string name="box_five">box five</string>
    <string name="box_four">box four</string>
    <string name="how_to_play">how to play</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_fragment_app">open fragment app</string>
    <string name="fragment_one">fragment one</string>
    <string name="fragment_two">fragment two</string>
    <string name="dessert_app">dessert app</string>
    <string name="ice">ice</string>
</resources>